[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Options/Options.gd" type="Script" id=1]
[ext_resource path="res://Font/BebasNeue-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Resources/Baba_Neue_Theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 400.0 ]
}

[node name="OptionsLabel" type="Label" parent="."]
margin_left = 280.0
margin_top = 90.0
margin_right = 515.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 290.0
margin_top = 220.0
margin_right = 510.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 2 )
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -160.0
margin_right = 50.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_right = 121.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
text = "Music"

[node name="MusicCheck" type="CheckButton" parent="VBoxContainer"]
margin_right = 121.0
margin_bottom = 40.0
theme = ExtResource( 3 )
pressed = true
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 44.0
margin_right = 121.0
margin_bottom = 104.0
focus_mode = 2
custom_fonts/font = SubResource( 3 )
text = "Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundCheck" type="CheckButton" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 121.0
margin_bottom = 84.0
theme = ExtResource( 3 )
pressed = true
text = "Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 88.0
margin_right = 121.0
margin_bottom = 148.0
focus_mode = 2
custom_fonts/font = SubResource( 3 )
text = "Debug"

[node name="DebugCheck" type="CheckButton" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 121.0
margin_bottom = 128.0
theme = ExtResource( 3 )
pressed = true
text = "Debug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoiceLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 132.0
margin_right = 121.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 238, -527 )
focus_mode = 2
custom_fonts/font = SubResource( 3 )
text = "Voice"

[node name="VoiceCheck" type="CheckButton" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 121.0
margin_bottom = 172.0
theme = ExtResource( 3 )
pressed = true
text = "Voice"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="toggled" from="VBoxContainer/MusicCheck" to="." method="_on_MusicCheck_toggled"]
[connection signal="toggled" from="VBoxContainer/SoundCheck" to="." method="_on_SoundCheck_toggled"]
[connection signal="toggled" from="VBoxContainer/DebugCheck" to="." method="_on_DebugCheck_toggled"]
[connection signal="toggled" from="VBoxContainer/VoiceCheck" to="." method="_on_VoiceCheck_toggled"]
